# writemagic

./: .gitignore  .gitmessage  .markdownlint.json  .pre-commit-config.yaml  AI_INTEGRATION_COMPLETE.md  AI_WRITING_ARCHITECTURE.md  ANDROID_COMPLETION_SUMMARY.md  API_DESIGN_FIXES_SUMMARY.md  BRAND.md  CI_CD_IMPLEMENTATION_COMPLETE.md  CLAUDE.md  CODE_AUDIT_COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FFI_CRITICAL_FIXES_SUMMARY.md  FIXES-PLAN.md  IMPLEMENTATION_REPORT.md  JTBD.md  LICENSE  LICENSE-HEADER.txt  MOBILE_ARCHITECTURE.md  MOBILE_FFI_COMPLETE.md  PHASE_6_COMPLETE.md  PWA_COMPLETION_REPORT.md  PWA_DEPLOYMENT_GUIDE.md  README.md  REVIEW.md  RUST_ENVIRONMENT_FIXES.md  RUST_SYSTEM_BEST_PRACTICES_IMPLEMENTATION_PROGRESS.md  RUST_WEB_BEST_PRACTICES_IMPLEMENTATION_PROGRESS.md  SECURITY.md  SPECS.md  SPECS_IMPROVED.md  TEST_EXPANSION_SUMMARY.md  UX_ENHANCEMENTS_REPORT.md  VALIDATION_IMPLEMENTATION_SUMMARY.md  VALIDATION_REPORT.md  WASM_BUILD_SUCCESS.md  WASM_SETUP_SUMMARY.md  (+22 more)
.cargo/: config.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: changelog-config.json  dependabot.yml
ai-proxy/: .env.example  .gitignore  README.md  package.json  server.js
android/: ANDROID_APP_COMPLETION_REPORT.md  ANDROID_TESTING.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
benches/: criterion_benchmarks.rs
best_practices_guides/: RUST_SYSTEM_PROGRAMMING_BEST_PRACTICES.md  RUST_WEBAPPS_BEST_PRACTICES.md
core/agent/: Cargo.toml
core/agent/src/: aggregates.rs  entities.rs  lib.rs  repositories.rs  services.rs  value_objects.rs
core/ai/: Cargo.toml
core/ai/src/: circuit_breaker.rs  entities.rs  examples.rs  examples_performance.rs  lib.rs  lib_test.rs  performance_monitor.rs  providers.rs  repositories.rs  request_batcher.rs  retry_patterns.rs  security.rs  services.rs  test_basic.rs  tests.rs  tokenization.rs  value_objects.rs  writing_service.rs  writing_service_examples.rs
core/ai/src/tests/: atomic_stats_tests.rs  mod.rs
core/ai/tests/: atomic_stats_tests.rs  benchmarks.rs  mod.rs  performance_tests.rs  providers_tests.rs  services_tests.rs
core/project/: Cargo.toml
core/project/src/: aggregates.rs  entities.rs  lib.rs  repositories.rs  services.rs  value_objects.rs
core/security/: Cargo.toml
core/security/src/: headers.rs  lib.rs  middleware.rs  policies.rs  scanner.rs
core/shared/: Cargo.toml
core/shared/src/: advanced_performance.rs  allocators.rs  buffer_pool.rs  database.rs  error.rs  error_handling_tests.rs  events.rs  ffi_safety.rs  lib.rs  observability.rs  property_testing.rs  repositories.rs  repository.rs  service_container.rs  services.rs  shutdown.rs  simd_optimizations.rs  tests.rs  traits.rs  types.rs  validation.rs  wasm_utils.rs
core/shared/src/tests/: mod.rs
core/shared/tests/: basic_tests.rs  buffer_pool_tests.rs  error_tests.rs  events_tests.rs  mod.rs  services_tests.rs  types_tests.rs
core/version_control/: Cargo.toml
core/version_control/src/: entities.rs  lib.rs
core/wasm/: Cargo.toml  PHASE2_INTEGRATION.md  README.md  build.rs  build.sh  example.js  test.html  wasm-pack.toml
core/wasm/src/: lib.rs
core/writing/: Cargo.toml  ENHANCED_CORE_ENGINE.md  sqlite::memory:-shm  sqlite::memory:-wal  writemagic.db-shm  writemagic.db-wal
core/writing/examples/: enhanced_core_engine.rs  sqlite_demo.rs
core/writing/src/: aggregates.rs  ai_writing_integration.rs  conversions.rs  core_engine.rs  entities.rs  events.rs  lib.rs  repositories.rs  services.rs  sqlite_repositories.rs  tests.rs  value_objects.rs
core/writing/src/web_persistence/: indexeddb_manager.rs  indexeddb_repositories.rs  migrations.rs  mod.rs  schema.rs  serialization.rs
core/writing/tests/: aggregate_tests.rs  entities_tests.rs  mod.rs  repositories_tests.rs  services_tests.rs  value_objects_tests.rs
docs/: CI_CD_SETUP.md  SECURITY_INCIDENT_RESPONSE.md
ffi/android/: Cargo.toml
ffi/android/src/: lib.rs
ffi/android/tests/: integration_tests.rs
ffi/ios/: Cargo.toml
ffi/ios/src/: lib.rs
ffi/ios/tests/: integration_tests.rs
ios/: .swiftformat  .swiftlint.yml
ios/libs/: README.md
k8s/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  namespace.yaml  network-policies.yaml  secrets.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20250101_000001_create_users_table.rs  m20250101_000002_create_documents_table.rs  m20250101_000003_create_projects_table.rs
monitoring/: prometheus.yml
scripts/: build-android-native.sh  build-android.sh  build-wasm.sh  setup-git.sh  setup-wasm.sh  test-wasm.sh
tests/: Cargo.toml  README.md  config.rs  coverage_analysis.rs  integration_validation.rs  lib.rs  main.rs  mobile_ffi_integration_test.rs  mobile_ffi_validation.rs  mocks.rs  orchestration.rs  performance_validation.rs  property_based_testing.rs  reporting.rs  utils.rs  validation_runner.rs
tests/config/: ci.toml  mod.rs
tests/integration/: ai_integration.rs  data_synchronization.rs  document_lifecycle.rs  edge_case_testing.rs  ffi_integration.rs  mod.rs  wasm_integration.rs
tests/orchestration/: main.rs  test_coordinator.rs
tests/performance/: benchmarks.rs  load_testing.rs  memory_profiling.rs  mod.rs
tests/validation_runner/: integration_validation.rs  mobile_ffi_validation.rs  performance_validation.rs
web/: Cargo.toml
web-app/: README.md
web/src/: config.rs  error.rs  main.rs  state.rs  telemetry.rs
web/src/entities/: document.rs  mod.rs  project.rs  user.rs
web/src/extractors/: auth.rs  mod.rs  request_id.rs  validated_json.rs
web/src/handlers/: auth.rs  documents.rs  mod.rs
web/src/middleware/: mod.rs  rate_limit.rs  request_id.rs
web/src/routes/: api.rs  auth.rs  documents.rs  health.rs  mod.rs
web/src/routes/api/: v1.rs
web/src/services/: auth.rs  mod.rs
web/src/utils/: crypto.rs  mod.rs
web/src/websocket/: connection.rs  handler.rs  manager.rs  messages.rs  mod.rs
web/tests/: integration_tests.rs
web/tests/common/: mod.rs
web/tests/integration/: auth_test.rs  documents_test.rs  mod.rs  rate_limit_test.rs
(+160 files in other folders)
