[package]
name = "writemagic-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
writemagic-shared = { path = "../shared" }
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
validator.workspace = true
garde.workspace = true
log.workspace = true
tracing.workspace = true