[package]
name = "writemagic-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
writemagic-shared = { path = "../shared" }
writemagic-writing = { path = "../writing" }

# Async
async-trait.workspace = true
tokio = { workspace = true, features = ["time", "sync"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# HTTP client
reqwest.workspace = true

# UUID and time
uuid.workspace = true
chrono.workspace = true

# Validation
validator.workspace = true
regex.workspace = true

# Logging
log.workspace = true
tracing.workspace = true

# Additional dependencies
dashmap = "5.5"
futures = "0.3"