[package]
name = "writemagic-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
writemagic-shared = { path = "../shared" }

# Async
async-trait.workspace = true
tokio = { workspace = true, features = ["time", "sync"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# HTTP client
reqwest.workspace = true

# UUID and time
uuid.workspace = true
chrono.workspace = true

# Validation
validator.workspace = true
regex.workspace = true

# Logging
log.workspace = true
tracing.workspace = true

# Additional dependencies
dashmap = "5.5"
futures = "0.3"

# Tokenization
tiktoken-rs = "0.5"
ahash = "0.8"

# Security and crypto
zeroize = "1.7"
constant_time_eq = "0.3"
blake3 = "1.5"

# Performance and monitoring
metrics = "0.21"
tracing-metrics = "0.2"
parking_lot = "0.12"