[package]
name = "writemagic-project"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["database"]
database = []
wasm = []

[dependencies]
writemagic-shared = { path = "../shared" }
writemagic-writing = { path = "../writing", default-features = false }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
validator.workspace = true
log.workspace = true
tracing.workspace = true

# Target-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.44", default-features = false, features = ["rt", "macros", "time", "sync"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }