[package]
name = "writemagic-security"
version = "0.1.0"
edition = "2021"
authors = ["WriteMagic Team <team@writemagic.com>"]
description = "Security hardening and vulnerability scanning for WriteMagic"
keywords = ["security", "scanning", "headers", "middleware"]
categories = ["web-programming", "network-programming"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/writemagic/writemagic"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["process", "fs"] }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

# Security-specific dependencies
ring = "0.17"
base64 = "0.21"
sha2 = "0.10"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[features]
default = []
runtime-scanning = ["tokio/process"]
container-scanning = ["runtime-scanning"]