[package]
name = "writemagic-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async
async-trait.workspace = true
tokio.workspace = true
tokio-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# UUID and time
uuid.workspace = true
chrono.workspace = true

# Validation
validator.workspace = true

# Database
sqlx.workspace = true

# Text processing
regex.workspace = true

# Crypto
sha2.workspace = true

# Logging
log.workspace = true
tracing.workspace = true

# Performance collections
smallvec.workspace = true
arrayvec.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio-test = "0.4"