[package]
name = "writemagic-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
jemalloc = ["tikv-jemallocator", "tikv-jemalloc-ctl"]
file-logging = ["tracing-appender"]
opentelemetry = ["tracing-opentelemetry"]
portable_simd = []
wasm = ["getrandom/js"]

[dependencies]
# Async
async-trait.workspace = true
tokio.workspace = true
tokio-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# UUID and time
uuid.workspace = true
chrono.workspace = true

# Validation
validator.workspace = true

# Database
sqlx.workspace = true

# Text processing
regex.workspace = true

# Crypto
sha2.workspace = true

# Logging
log.workspace = true
tracing.workspace = true

# Performance collections
smallvec.workspace = true
arrayvec.workspace = true
bytes.workspace = true

# Advanced performance
memmap2.workspace = true
num_cpus.workspace = true
crossbeam.workspace = true
rayon.workspace = true
atty.workspace = true

# WASM dependencies (optional)
getrandom = { workspace = true, optional = true }

# Optional features
tikv-jemallocator = { workspace = true, optional = true }
tikv-jemalloc-ctl = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
criterion.workspace = true
proptest.workspace = true