[package]
name = "writemagic-version-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
writemagic-shared = { path = "../shared" }
writemagic-writing = { path = "../writing" }
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
git2.workspace = true
uuid.workspace = true
chrono.workspace = true
validator.workspace = true
garde.workspace = true
log.workspace = true
tracing.workspace = true